[package]
name = "lcs-image-diff"
version = "0.1.6"
repository = "https://github.com/bokuweb/lcs-image-diff-rs"
license = "MIT"
readme = "README.md"
authors = ["bokuweb <bokuweb12@gmail.com>"]
description = "Image diff tool with LCS algorithm"
keywords = [
    "diff",
    "image",
    "lcs",
]

[[bin]]
name = "lcs-image-diff"
path = "src/main.rs"

[dependencies]
base64 = "0.9.0"
clap = "2.30.0"
futures = "0.1.18"
futures-cpupool = "0.1.8"
image = "0.18.0"
lcs-diff = "0.1.1"
