[package]
name = "lcs-image-diff"
version = "0.1.6"
repository = "https://github.com/bokuweb/lcs-image-diff-rs"
license = "MIT"
readme = "README.md"
authors = ["bokuweb <bokuweb12@gmail.com>"]
description = "Image diff tool with LCS algorithm"
keywords = [
    "diff",
    "image",
    "lcs",
]

[lib]
name = "lcs_image_diff"
path = "src/lib.rs"

[[bin]]
name = "lcs-image-diff"
path = "src/main.rs"
required-features = ["binary"]

[features]
default = ["binary"]
binary = ["futures", "futures-cpupool", "all_image_formats"]
all_image_formats = [
    "image/gif_codec",
    "image/jpeg",
    "image/ico",
    "image/png_codec",
    "image/pnm",
    "image/tga",
    "image/tiff",
    "image/webp",
    "image/bmp",
    "image/hdr",
    "image/dxt",
    "image/jpeg_rayon"
]

[dependencies]
base64 = "0.9.0"
clap = "2.30.0"
futures = { version = "0.1.18", optional = true }
futures-cpupool = { version = "0.1.8", optional = true }
image = { version = "0.20", default-features = false }
lcs-diff = "0.1.1"
